--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
