--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
-  "engines": {
+  "enginesgtgit p": {
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
